--- a/client/test.scss
+++ b/client/test.scss
@@ -1,1 +1,12 @@
-$color: #94b4fd;
+$color: #9ebafc;
+
+.name{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
