--- a/client/test.scss
+++ b/client/test.scss
@@ -8,5 +8,5 @@
 .First, .Second, .Third {
     display: flex;
     width: 100%;
-    background-color: rgb(199, 199, 199);
+    color: rgb(243, 243, 64);
 }
